# flight_tracking

./: README.md
plane-tracker/: .gitignore  GEMINI.md  PAUTAS_PROYECTO.md  docker-compose-dev.yml  docker-compose.yml  lesson.md  main.py
plane-tracker/backend/app/: pyproject.toml  sql_app.db
plane-tracker/backend/app/app/: main.py
plane-tracker/backend/app/app/api/: deps.py
plane-tracker/backend/app/app/api/v1/: api.py
plane-tracker/backend/app/app/api/v1/endpoints/: airports.py  planes.py
plane-tracker/backend/app/app/core/: config.py  database.py  dependencies.py
plane-tracker/backend/app/app/core/dependencies/: airport_service_dependencies.py  osky_service_dependencies.py
plane-tracker/backend/app/app/models/: airport_model.py
plane-tracker/backend/app/app/schemas/: airport_schema.py  vector_schema.py
plane-tracker/backend/app/app/services/: airport_service.py  airportdb_service.py  osky_service.py
plane-tracker/backend/app/app/services/clients/: oauth2_client.py
plane-tracker/backend/app/app/utils/mappers/: airport_mapper.py  vector_mapper.py
plane-tracker/db_init/: csv_parse.py  database.sql  init.sql
