[tool.poetry]
name = "app"
version = "0.1.0"
description = "A sample fastapi project created with create-fastapi-project"
authors = [ "Your Name <your@email.com>",]
readme = "README.md"
[[tool.poetry.packages]]
include = "app"

[tool.black]
line-length = 88
target-version = [ "py37", "py38", "py39", "py310", "py311",]
exclude = "((.eggs | .git | .pytest_cache | build | dist))"

[tool.ruff]
line-length = 88
exclude = [ ".git", "__pycache__", ".mypy_cache", ".pytest_cache",]
select = [ "E", "W", "F", "C", "B",]
ignore = [ "B904", "B006", "E501", "B008", "C901",]

[tool.mypy]
warn_return_any = true
warn_unused_configs = true
ignore_missing_imports = true
exclude = [ "alembic", "__pycache__",]

[tool.build-system]
requires = [ "poetry-core",]
build-backend = "poetry.core.masonry.api"

[tool.poetry.dependencies]
python = ">=3.10,<3.12"
fastapi = "^0.127.0"
uvicorn = {extras = ["standard"], version = "^0.40.0"}
asyncer = "^0.0.11"
pydantic = "^2.12.5"
pydantic-settings = "^2.12.0"
fastapi-pagination = "^0.15.4"
sqlmodel = "^0.0.31"
aiosqlite = "^0.22.1"
geoalchemy2 = {extras = ["shapely"], version = "^0.18.1"}
asyncpg = "^0.31.0"

[tool.ruff.per-file-ignores]
"__init__.py" = [ "F401",]
